@@ -9,7 +9,7 @@
 		<PROPERTY NAME="label" VALUE="TeX" />
 		<PROPERTY NAME="filenameGlob" VALUE="*.{tex,sty,ltx}" />
 	</PROPS>
-	<RULES HIGHLIGHT_DIGITS="TRUE">
+	<RULES>
 		<WHITESPACE> </WHITESPACE>
 		<WHITESPACE>	</WHITESPACE>
 
@@ -68,7 +68,7 @@
 		<SEQ TYPE="NULL">:</SEQ>
 	</RULES>
 
-	<RULES SET="MATH" DEFAULT="KEYWORD2" HIGHLIGHT_DIGITS="TRUE">
+	<RULES SET="MATH" DEFAULT="KEYWORD2">
 		<!-- whitespace: (space and tab) -->
 		<WHITESPACE> </WHITESPACE>
 		<WHITESPACE>	</WHITESPACE>
