@@ -44,7 +44,7 @@ public class reload_all extends EditAction
 		for(int i = 0; i < buffers.length; i++)
 		{
 			Buffer buffer = buffers[i];
-			buffer.load(view);
+			buffer.load(view,true);
 		}
 
 		view.hideWaitCursor();
